# fastapi_todo_app

./: pyproject.toml
app/: .env  app.py
app/api/: router.py
app/api/auth/: jwt.py
app/api/dependencies/: user_deps.py
app/api/handlers/: todo.py  user.py
app/core/: config.py  security.py
app/models/: todo_model.py  user_model.py
app/schemas/: todo_schema.py  user_schema.py
app/services/: todo_service.py  user_service.py
backend/: pyproject.toml
backend/app/api/auth/: jwt.py
backend/app/api/handlers/: todo.py
backend/app/core/: config.py
backend/app/models/: todo_model.py  user_model.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
