[project]
name = "fastapi-todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "beanie>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.10.1",
    "python-decouple>=3.8",
]
